--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@ ul {
 	list-style: none;
 	padding-left: 0;
 	position: relative;
-	bottom: -870px;
-
 }
 
 
@@ -12,6 +10,8 @@ li {
     position: absolute;
     font-size: 20px;
 	transition: all .5s;
+	width: 100%;
+	overflow: auto;
 }
 
 
@@ -25,7 +25,6 @@ form {
 }
 
 .ng-move {
-	background: lightpink;
-	transition: all 0.5s;
+	background: #fff6f6;
+	transition: all .5s;
 }
-
